; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_netif/extr_esp_netif_objects.c_esp_netif_list_unlock.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_netif/extr_esp_netif_objects.c_esp_netif_list_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_list_lock = common dso_local global i32* null, align 8
@s_esp_netif_counter = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_netif_list_unlock() #0 {
  %1 = load i32*, i32** @s_list_lock, align 8
  %2 = call i32 @assert(i32* %1)
  %3 = load i32*, i32** @s_list_lock, align 8
  %4 = call i32 @xSemaphoreGive(i32* %3)
  %5 = load i64, i64* @s_esp_netif_counter, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32*, i32** @s_list_lock, align 8
  %9 = call i32 @vQueueDelete(i32* %8)
  store i32* null, i32** @s_list_lock, align 8
  br label %10

10:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @xSemaphoreGive(i32*) #1

declare dso_local i32 @vQueueDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
